--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My first website</title>
 </head>
 <body>
-    <h1>Welcome To My First Website</h1>
+    <h1>Welcome To My First Website</h1> 
+    <h2>I am trying to edit this file, so that i can commit it again</h2>
 </body>
 </html>
