updated important ingredients

--- a/procedure.html
+++ b/procedure.html
@@ -13,6 +13,8 @@
         <li>Egg</li>
         <li>Vanilla</li>
         <li>salt</li>
+        <li>Oil</li>
+        <li>Water</li>
     </ol>
 </body>
 </html>
