updated procedure text

--- a/procedure.html
+++ b/procedure.html
@@ -16,5 +16,14 @@
         <li>Oil</li>
         <li>Water</li>
     </ol>
+
+    <h2>Procedures</h2>
+    <ol>
+        <li>Add butter</li>
+        <li>Add sugar</li>
+        <li>Mix thoroughly</li>
+        <li>Add egg</li>
+    </ol>
+
 </body>
 </html>
