updated procedure text in main

--- a/procedure.html
+++ b/procedure.html
@@ -6,8 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ingredients/h1>
-    <ol>
+
+    <h1>How To Make</h1> 
+
+    <p>
+      <h2>Ingredients Required</h2>
+      <ol>
         <li>Butter</li>
         <li>Sugar</li>
         <li>Egg</li>
@@ -15,6 +19,7 @@
         <li>salt</li>
         <li>Oil</li>
         <li>Water</li>
-    </ol>
+      </ol>
+    </p>
 </body>
 </html>
