updated procedure text in updatetext

--- a/procedure.html
+++ b/procedure.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ingredients/h1>
+    <h1>Ingredients required</h1>
     <ol>
         <li>Butter</li>
         <li>Sugar</li>
@@ -17,7 +17,7 @@
         <li>Water</li>
     </ol>
 
-    <h2>Procedures</h2>
+    <h2>Procedures </h2>
     <ol>
         <li>Add butter</li>
         <li>Add sugar</li>
