--- a/procedure.html
+++ b/procedure.html
@@ -14,7 +14,7 @@
         <li>Sugar</li>
         <li>Egg</li>
         <li>Vanilla</li>
-        <li>salt</li>
+        <li>flour</li>
         <li>Oil</li>
         <li>Water</li>
     </ol>
