--- a/procedure.html
+++ b/procedure.html
@@ -11,8 +11,8 @@
         <li>Butter</li>
         <li>Sugar</li>
         <li>Egg</li>
-        <li>Vanilla</li>
-        <li>salt</li>
+        <li>chocolate</li>
+        <li>milk</li>
         <li>Oil</li>
         <li>Water</li>
     </ol>
