--- a/procedure.html
+++ b/procedure.html
@@ -13,7 +13,7 @@
         <li>Butter</li>
         <li>Sugar</li>
         <li>Egg</li>
-        <li>Vanilla</li>
+        <li>red</li>
         <li>salt</li>
         <li>Oil</li>
         <li>Water</li>
