--- a/procedure.html
+++ b/procedure.html
@@ -22,7 +22,7 @@
         <li>Add butter</li>
         <li>Add sugar</li>
         <li>Mix thoroughly</li>
-        <li>Add egg</li>
+        <li>Add water</li>
         <li>Mix again</li>
     </ol>
 
