--- a/procedure.html
+++ b/procedure.html
@@ -23,7 +23,7 @@
         <li>Add sugar</li>
         <li>Mix thoroughly</li>
         <li>Add water</li>
-        <li>Mix again</li>
+        <li>Mix stop</li>
     </ol>
 
 </body>
