--- a/procedure.html
+++ b/procedure.html
@@ -10,7 +10,7 @@
     <h1>Ingredients required</h1>
     <ol>
 
-        <li>Butter</li>
+        <li>nutmeg</li>
         <li>Sugar</li>
         <li>Egg</li>
         <li>red</li>
