Update index.html from browser

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome To My First Website</h1> 
-    <h2>I am trying to edit this file, so that i can commit it again</h2>
+    <h2>I am trying to edit this file, so that i can commit it again when i am done </h2>
     <h3>This is my third edit</h3>
 </body>
 </html>
